# amiga-digital-sampler

./: README.md
pi/: Makefile  audio.c  audio.h  dsp.c  dsp.h  gpio_monitor.c  gpio_monitor.h  main.c  pi_ramp_test.c  presets.c  presets.h  ringbuf.c  ringbuf.h  sampler_active.sh  sampler_inactive.sh  spi.c  spi.h  ui.c  ui.h
pico/: CMakeLists.txt  pico_amiga_sampler.c  pico_hct_test.c  pico_spi_test.c  sampleout.pio  spi_slave_rx.pio
